Fixed the TeamServiceTest and started seriously working on ArtifactServiceTest